# FastWhisperLive

./: .gitignore  .python-version  README.md  pyproject.toml  run_server.py  set.py  temp.opus
.github/workflows/: ecs-test.yml
docker/: Dockerfile.cpuv2
whisper_live/: server.py  vad.py
